configs/iptables.rules
# Generated by iptables-save v1.4.3.2 on Tue May 12 16:27:11 2009
# dont forget to enable both the open and interfaces chains
*filter
:INPUT DROP [0:0]
:FORWARD DROP [0:0]
:OUTPUT ACCEPT [305:26996]
:interfaces - [0:0]
:open - [0:0]
-A INPUT -p icmp -j ACCEPT 
-A INPUT -m state --state RELATED,ESTABLISHED -j ACCEPT 
-A INPUT -j interfaces 
-A INPUT -j open 
-A INPUT -p tcp -j REJECT --reject-with tcp-reset 
-A INPUT -p udp -j REJECT --reject-with icmp-port-unreachable 
-A interfaces -i lo -j ACCEPT 
-A open -p tcp -m tcp --dport 22 -j ACCEPT 
-A open -p tcp -m tcp --dport 8112 -j ACCEPT 
-A open -p udp -m udp --dport 5001 -j ACCEPT 
COMMIT
# for source, use -s 128.252.0.0/16
# Completed on Tue May 12 16:27:11 2009
